[package]
name = "rust_os"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

[package.metadata.bootimage]
default-target = "x86_64-rust_os.json"

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.6"
spin = "0.5.0"

[dependencies.lazy_static]
lazy_static = "1.3.0"
features=["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
